--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column font-weight-bold jumbotron justify-content-center animated fadeIn p-0" id="jumbotron">
   <div id="blurBox" class="p-4 text-center">
     <p class="text-white animated delay-2s fadeInDown m-0">Jekyll theme by <a href="http://szhshp.org">Szhshp</a></p>
-    <p class="animated display-4 delay-2s fadeInDown text-white">Project Gaia</p>
+    <p class="animated display-4 delay-2s fadeInDown text-white">VietYA team</p>
     <p class="animated delay-2s fadeInDown font-weight-normal pt-2 text-white m-0">
-      V2.0
+      Tổ chức tình nguyện
       <br>
       Powered by Jekyll, Bootstrap 4, JQuery 3
     </p>
