--- a/fonts/FZLTXIHJW.css
+++ b/fonts/FZLTXIHJW.css
@@ -1,12 +1,7 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "FZLTXIHJW";
-  src: url("FZLTXIHJW.woff2") format("woff2"),
-       url("FZLTXIHJW.woff") format("woff"),
-       url("FZLTXIHJW.ttf") format("truetype"),
-       url("FZLTXIHJW.eot") format("embedded-opentype"),
-       url("FZLTXIHJW.svg") format("svg");
+  font-family: sans-serif;
   font-weight: normal;
   font-style: normal;
 }
