--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <p class="animated delay-2s fadeInDown font-weight-normal pt-2 text-white m-0">
       Tổ chức tình nguyện
       <br>
-      Powered by Jekyll, Bootstrap 4, JQuery 3
+      Thành phố HCM
     </p>
 
     <p class="lead m-0">
